--- a/include/sal/log-areas.dox
+++ b/include/sal/log-areas.dox
@@ -463,6 +463,7 @@ certain functionality.
 @li @c vcl.icontest
 @li @c vcl.kde4 - KDE4
 @li @c vcl.kde5 - KDE5
+@li @c vcl.kf5 - KF5
 @li @c vcl.layout - Widget layout
 @li @c vcl.lazydelete
 @li @c vcl.opengl
